--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,9 @@
+@import url(./fonts.scss);
+
+
+
+
+
 $bgColor: #24292e;
 $text: #fff;
 
@@ -5,7 +11,7 @@ $text: #fff;
 body {
     padding: 1rem;
     margin: 0;
-    font-family: Comic, sans-serif;
+    font-family: 'TTLakes-Regular';
     background-color: $bgColor;
     color: $text;
 
