Included menu-navigation block

--- a/src/scss/blocks/_services-header.scss
+++ b/src/scss/blocks/_services-header.scss
@@ -1,6 +1,6 @@
 .service__header{
     max-width: 1440px;
-    background-color: #F8F8F8;
+    background-color: $bgColor;
     padding: 20px 0;
     font-family: 'TTLakes-Bold';
     margin: 0 auto;
