--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -5,7 +5,7 @@
     align-items: center;
     border-bottom: 2px solid #e8faf7;
     padding: 5px;
-    background-color: $bgColor;
+    background-color: #fff;
 }
 
 @media(min-width: 1120px){
