--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,5 +7,8 @@
 //Header rules import
 @import "blocks/header";
 
-//Services header pules import
+//Services header rules import
 @import "blocks/services-header";
+
+//Menu-navigation rules import
+@import "blocks/menu-navigation";
