Include repair block, only css styles

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,4 +14,7 @@
 @import "blocks/menu-navigation";
 
 //Services block rules import
-@import "blocks/services"
+@import "blocks/services";
+
+//Repair block rules import
+@import "blocks/repair";
