Include main-menu, but not plug in it.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,9 @@
 //Common page rules import
 @import "overall.scss";
 
+//Main-menu rules import
+@import "blocks/main-menu";
+
 //Header rules import
 @import "blocks/header";
 
