--- a/src/scss/blocks/_services.scss
+++ b/src/scss/blocks/_services.scss
@@ -3,6 +3,96 @@
     background-color: $bgColor;
     max-width: 1440px;
     margin: 0 auto;
+
+    &__par-block{
+        padding: 20px;
+        margin-top: 20px;
+    }
+
+    &__par-text{
+        height: 17vh;
+        overflow-y: hidden;
+        transition: height;
+        transition-duration: 1.2s;;
+
+        &--opened{
+            transition: height;
+            transition-duration: 1.2s;;
+            height: 90%;
+        }
+    }
+    
+    @media(min-width: 660px){
+        &__par-block{
+            flex-basis: 50%;
+            margin-top: 0;
+            padding-top: 0;
+        }
+    }
+    
+    @media(min-width: 660px){
+        &__par-text{
+            font-size: 1.1rem;
+        }
+    }
+    
+    &__readmore-wrap{
+        margin-top: 10px;
+    }
+    
+    &__readmore-button{
+        cursor: pointer;
+        text-align: right;
+        border: none;
+        border-radius: 3px;
+        background: url("../img/section-imgs/expand-up.svg") no-repeat left;
+        padding: 7px;
+        font-size: 15px;
+        font-weight: lighter;
+        padding-left: 30px;
+    
+        &:hover{
+            box-shadow: inset 0 0 3px 0 rgb(161, 161, 161);
+        }
+    
+        &:focus{
+            outline: none;
+        }
+    
+        &--active{
+            background: url("../img/section-imgs/expand-down.svg") no-repeat left;
+        }
+    }
+
+    &-description{
+        display: block;
+    }
+    
+    @media(min-width: 660px){
+        &-description{
+            display: flex;
+            flex-wrap: wrap;
+            padding: 15px;
+        }
+    }
+}
+
+.srevices__img{
+    width: 100%;
+}
+
+.srevices__img--picture{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+@media(min-width: 660px){
+    .srevices__img{
+        flex-basis: 50%;
+        align-self: flex-start;
+        border-radius: 15px;
+    }
 }
 
 .comments{
@@ -24,87 +114,3 @@
         }
     }
 }
-
-
-.services__par-block{
-    padding: 20px;
-    margin-top: 20px;
-}
-
-@media(min-width: 660px){
-    .services__par-block{
-        flex-basis: 50%;
-        margin-top: 0;
-        padding-top: 0;
-    }
-}
-
-.services__par-text{
-    height: 17vh;
-    overflow-y: hidden;
-}
-
-@media(min-width: 660px){
-    .services__par-text{
-        font-size: 1.1rem;
-    }
-}
-
-.services__readmore-wrap{
-    margin-top: 10px;
-}
-
-.services__readmore-button{
-    cursor: pointer;
-    text-align: right;
-    border: none;
-    border-radius: 3px;
-    background: url("../img/section-imgs/expand-up.svg") no-repeat left;
-    padding: 7px;
-    font-size: 15px;
-    font-weight: lighter;
-    padding-left: 30px;
-
-    &:hover{
-        box-shadow: inset 0 0 3px 0 rgb(161, 161, 161);
-    }
-
-    &:focus{
-        outline: none;
-    }
-
-    &--active{
-        background: url("../img/section-imgs/expand-down.svg") no-repeat left;
-    }
-}
-
-.srevices__img{
-    width: 100%;
-
-    &--picture{
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-    }
-}
-
-@media(min-width: 660px){
-    .srevices__img{
-        flex-basis: 50%;
-        align-self: flex-start;
-        border-radius: 15px;
-    }
-}
-
-.services-description{
-    display: block;
-}
-
-@media(min-width: 660px){
-    .services-description{
-        display: flex;
-        flex-wrap: wrap;
-        padding: 15px;
-    }
-}
-
