Include tech-repair block html

--- a/src/scss/blocks/_repair.scss
+++ b/src/scss/blocks/_repair.scss
@@ -71,7 +71,7 @@
     margin-bottom: 15px;
     background: url(../img/repair-imgs/go.svg) 90% no-repeat ;
     background-color: #fff;
-    border: 1px solid #EAEAEA;
+    border: 1px solid $borderColor;
     border-radius: 6px;
     transition: transform;
     transition-duration: 0.4s;
