Included tech bahavior and some styles

--- a/src/scss/_overall.scss
+++ b/src/scss/_overall.scss
@@ -17,5 +17,6 @@ html{
 body{
     font-family: 'TTLakes-Regular';
     letter-spacing: 1px;
+    background-color: $bgColor;
     /* max-width: 1120px; */
 }
