Inserted some new scss for the price block

--- a/src/scss/_overall.scss
+++ b/src/scss/_overall.scss
@@ -1,7 +1,8 @@
 $bgColor: #F8F8F8;
+$whiteBg: #FFF;
 $borderColor: #EAEAEA;
 $pincBtnCol: #FF3E79;
-$maxSecreen: 1440px;
+$greyText: #7E7E82;
 
 
 html{
