--- a/src/scss/blocks/_tech.scss
+++ b/src/scss/blocks/_tech.scss
@@ -4,7 +4,7 @@
 }
 
 .tech-item{
-    margin: 16px 0px 55px 0px;;
+    margin: 16px 0px 55px 0px;
     text-decoration: none;
     font-size: 15px;
     font-family: 'TTLakes-Medium';
@@ -14,7 +14,7 @@
     box-shadow: inset 0 0 0 1px $borderColor;
     border-radius: 6px;
     background: url(../img/repair-imgs/go.svg) 90% 85% no-repeat;
-    background-color: #fff;
+    background-color: $whiteBg;
 
     &__text{
         display: block;
