--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,5 +22,8 @@
 //Repair block rules import
 @import "blocks/repair";
 
-//Technic repair rules mode
+//Technic repair rules import
 @import "blocks/tech";
+
+//Price list rules import
+@import "blocks/price";
