--- a/src/scss/blocks/_repair.scss
+++ b/src/scss/blocks/_repair.scss
@@ -13,12 +13,26 @@
         text-transform: uppercase;
         font-size: 16px;
         line-height: 24px;
-        color:  #7E7E82;
+        color:  $greyText;
         font-family: 'TTLakes-Regular';
         font-weight: 500;
         letter-spacing: 0.2px;
         margin: 15px 0px 15px 31px;
     }
+}
+
+.repair-block{
+    width: 80vw;
+    margin: 0 auto;
+}
+
+@media(min-width: 564px){
+
+    .repair-block{
+        width: auto;
+        margin: auto;
+    }
+
 }
 
 .repair-main{
@@ -71,7 +85,7 @@
     margin-bottom: 15px;
     background: url(../img/repair-imgs/go.svg) 90% no-repeat ;
     background-color: #fff;
-    border: 1px solid $borderColor;
+    box-shadow: inset 0 0 0 1px $borderColor;
     border-radius: 6px;
     transition: transform;
     transition-duration: 0.4s;
