--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -6,14 +6,35 @@
         background-color: $whiteBg;
         border-radius: 6px;
         box-shadow: inset 0 0 0 1px $borderColor;
-        height: 200px;
+        min-height: 200px;
+        font-size: 14px;
         margin: 16px 0px 55px 0px;
 
         &-item{
-            margin: 16px 16px;
+            margin: 16px;
 
             &__header{
                 color: $greyText;
+            }
+
+            &--link-item{
+                position: absolute;
+                right: 16px;
+                bottom: 16px;
+            }
+
+            &__link{
+                width: 120px;
+                height: 32px;
+                background-color: $pincBtnCol;
+                border-radius: 16px;
+                text-decoration: none;
+                color: $whiteBg;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                word-spacing: 4px;
+                font-family: 'TTLakes-Medium';
             }
         }
     }
