--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,4 +29,7 @@
 @import "blocks/price";
 
 //Commercial-offer block rules import
-@import "blocks/commercial-offer"
+@import "blocks/commercial-offer";
+
+//Footer scss rules import
+@import "blocks/footer";
