--- a/src/scss/blocks/_services.scss
+++ b/src/scss/blocks/_services.scss
@@ -18,7 +18,7 @@
         &--opened{
             transition: height;
             transition-duration: 1.2s;;
-            height: 90%;
+            height: auto;
         }
     }
     
