--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,9 @@
 //Fonts file import
 @import "fonts.scss";
 
+//Animation keyframes import
+@import "animations.scss";
+
 //Common page rules import
 @import "overall.scss";
 
