--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -37,6 +37,10 @@
                 display: flex;
                 align-items: center;
                 font-family: 'TTLakes-Medium';
+
+                &:hover{
+                    box-shadow: 0 0 5px 2px #e698bf;
+                }
             }
         }
     }
