--- a/src/scss/blocks/_menu-navigation.scss
+++ b/src/scss/blocks/_menu-navigation.scss
@@ -22,6 +22,7 @@
 .services-slider__item{
     display: flex;
     justify-content: center;
+    align-items: center;
     cursor: pointer;
     min-width: 250px;
     flex-basis: 20%;
@@ -32,6 +33,8 @@
 
     &:hover{
         font-weight: bolder;
+        background-color: rgba(255, 255, 255, 0.849);
+        box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.925);
     }
 
     &--active{
