--- a/src/scss/blocks/_menu-navigation.scss
+++ b/src/scss/blocks/_menu-navigation.scss
@@ -1,10 +1,15 @@
 .menu-navigation{
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: #F8F8F8;
     max-width: 1440px;
     margin: 0 auto;
 }
 
+@media(min-width: 1120px){
+    .menu-navigation{
+        max-width: 1120px;
+    }
+}
 
 .services-slider{
     display: flex;
@@ -12,30 +17,15 @@
     padding: 0 10px;
 }
 
-// @media(min-width: 1120px){
-//     .services-slider{
-//         overflow-x: scroll;
-//     }
-
-// }
-
 .services-slider__item{
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
     min-width: 250px;
     flex-basis: 20%;
-    padding: 5px;
     font-family: 'TTLakes-Regular';
     font-weight: lighter;
     border-radius: 6px;
-
-    &:hover{
-        font-weight: bolder;
-        background-color: rgba(255, 255, 255, 0.849);
-        box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.925);
-    }
 
     &--active{
         background-color: #fff;
@@ -44,7 +34,26 @@
 }
 
 
+@media(min-width: 1120px){
+    .services-slider__item{
+        width: 100%;
+    }
+}
+
 .services-slider__text{
     text-decoration: none;
     color: black;
+    margin: 5px;
+
+    &:hover{
+        cursor: pointer;
+        font-weight: 500;
+        text-decoration: underline;
+    }
+}
+
+@media(min-width: 1120px){
+    .services-slider__text{
+        font-size: 13px;
+    }
 }
