--- a/src/scss/blocks/_tech.scss
+++ b/src/scss/blocks/_tech.scss
@@ -3,16 +3,33 @@
     margin: 0 auto;
 }
 
+@media(min-width: 564px){
+    .tech-block{
+        width: auto;
+        margin: 0 auto;
+    }
+
+    .tech-cards{
+        display: flex;
+        flex-wrap: wrap;
+        height: 180px;
+        overflow-y: hidden;
+        transition: height;
+        transition-duration: 0.7s;
+        transition-timing-function: ease-in;
+    }
+}
+
 .tech-item{
     margin: 16px 0px 55px 0px;
     text-decoration: none;
     font-size: 15px;
     font-family: 'TTLakes-Medium';
     color: black;
-    width: 100% !important;
     height: 160px !important;
     box-shadow: inset 0 0 0 1px $borderColor;
     border-radius: 6px;
+    border-top: 1px solid transparent;
     background: url(../img/repair-imgs/go.svg) 90% 85% no-repeat;
     background-color: $whiteBg;
 
@@ -26,5 +43,17 @@
         display: block;
         margin-left: 16px;
         margin-top: 16px;
+    }
+}
+
+@media(min-width: 564px){
+    .tech-item{
+        width: 225px;
+        display: block;
+        margin: 10px;
+    }
+
+    .tech-item:first-child{
+        margin-left: 20px;
     }
 }
