--- a/src/scss/blocks/_services-header.scss
+++ b/src/scss/blocks/_services-header.scss
@@ -47,10 +47,18 @@
         background: url("../img/header-imgs/checkstatus.svg") no-repeat right;
     }
 
-    // .header-button--service-bth:hover{
-    //     box-shadow: 0 0 5px 2px rgb(122, 122, 122);
-    //     border-radius: 5px;
-    // }
+    .service-wide-bth--checkstatus-img:hover,
+    .service-wide-bth--repair-img:hover{
+        box-shadow: 0 0 1px 2px rgb(122, 122, 122);
+        border-radius: 5px;
+    }
+
+    .service-wide-bth--checkstatus-img:focus,
+    .service-wide-bth--repair-img:focus{
+        border: none;
+        outline: none;
+        background-color: #fff9f9;
+    }
 
     .header-button--service-txt{
         display: block;
