--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -17,31 +17,90 @@
                 color: $greyText;
             }
 
-            &--link-item{
+            &__link-item{
                 position: absolute;
                 right: 16px;
                 bottom: 16px;
             }
 
-            &__link{
-                width: 110px;
-                height: 32px;
-                background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
-                background-color: $pincBtnCol;
-                border-radius: 16px;
-                font-size: 14px;
-                padding-left: 10px;
-                text-decoration: none;
-                text-transform: uppercase;
-                color: $whiteBg;
-                display: flex;
-                align-items: center;
-                font-family: 'TTLakes-Medium';
+            // &__link{
+            //     width: 110px;
+            //     height: 32px;
+            //     background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
+            //     background-color: $pincBtnCol;
+            //     border-radius: 16px;
+            //     font-size: 14px;
+            //     padding-left: 10px;
+            //     text-decoration: none;
+            //     text-transform: uppercase;
+            //     color: $whiteBg;
+            //     display: flex;
+            //     align-items: center;
+            //     font-family: 'TTLakes-Medium';
 
-                &:hover{
-                    box-shadow: 0 0 5px 2px #e698bf;
-                }
+            //     &:hover{
+            //         box-shadow: 0 0 5px 2px #e698bf;
+            //     }
+            // }
+        }
+    }
+}
+
+@media (min-width: 564px){
+    .price-block{
+        display: none;
+    }
+}
+
+.price-card-item__link{
+    width: 110px;
+    height: 32px;
+    background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
+    background-color: $pincBtnCol;
+    border-radius: 16px;
+    font-size: 14px;
+    padding-left: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: $whiteBg;
+    display: flex;
+    align-items: center;
+    font-family: 'TTLakes-Medium';
+
+    &:hover{
+        box-shadow: 0 0 5px 2px #e698bf;
+    }
+}
+
+.price-wide{
+    display: none;
+}
+
+@media (min-width: 564px){
+    .price-wide{
+        display: block;
+        margin: 20px;
+
+        &-header{
+            display: flex;
+            height: 36px;
+            color: $greyText;
+            margin-top: 25px;
+
+            &__service-opt{
+                flex-basis: 55%;
             }
+
+            &__price,
+            &__term,
+            &__spacer{
+                flex-basis: 15%;
+            }
+        }
+
+        &-table{
+            background-color: $whiteBg;
+            border-radius: 6px;
         }
     }
 }
