--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -22,26 +22,6 @@
                 right: 16px;
                 bottom: 16px;
             }
-
-            // &__link{
-            //     width: 110px;
-            //     height: 32px;
-            //     background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
-            //     background-color: $pincBtnCol;
-            //     border-radius: 16px;
-            //     font-size: 14px;
-            //     padding-left: 10px;
-            //     text-decoration: none;
-            //     text-transform: uppercase;
-            //     color: $whiteBg;
-            //     display: flex;
-            //     align-items: center;
-            //     font-family: 'TTLakes-Medium';
-
-            //     &:hover{
-            //         box-shadow: 0 0 5px 2px #e698bf;
-            //     }
-            // }
         }
     }
 }
@@ -58,7 +38,7 @@
     background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
     background-color: $pincBtnCol;
     border-radius: 16px;
-    font-size: 14px;
+    font-size: 13px;
     padding-left: 10px;
     text-decoration: none;
     text-transform: uppercase;
@@ -66,6 +46,10 @@
     display: flex;
     align-items: center;
     font-family: 'TTLakes-Medium';
+
+    &--wide-mode{
+        margin-left: 15px;
+    }
 
     &:hover{
         box-shadow: 0 0 5px 2px #e698bf;
@@ -84,23 +68,56 @@
         &-header{
             display: flex;
             height: 36px;
-            color: $greyText;
-            margin-top: 25px;
+            margin: 25px 10px 0 10px;
 
-            &__service-opt{
-                flex-basis: 55%;
-            }
+            &__elem{
+                color: $greyText;
 
-            &__price,
-            &__term,
-            &__spacer{
-                flex-basis: 15%;
+                &--service-opt{
+                    flex-basis: 55%;
+                }
+
+                &--price,
+                &--term,
+                &--spacer{
+                    flex-basis: 15%;
+                }
             }
         }
 
         &-table{
             background-color: $whiteBg;
             border-radius: 6px;
+
+            &__row{
+                display: flex;
+                margin: 0 10px;
+            }
+
+
+            &__row:not(:last-child){
+                border-bottom: 1px solid $borderColor;
+            }
+
+            &__cell{
+                display: flex;
+                height: 60px;
+                align-items: center;
+
+                &--option{
+                    flex-basis: 55%;
+                }
+
+                &--price,
+                &--term{
+                    flex-basis: 15%;
+                }
+
+                &--wide-mode{
+                    flex-basis: 15%;
+                    justify-content: flex-end;
+                }
+            }
         }
     }
 }
