Made separate js file for sliders

--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -90,14 +90,15 @@
             border-radius: 6px;
 
             &__row{
+                position: relative;
                 display: flex;
                 margin: 0 10px;
             }
 
-
-            &__row:not(:last-child){
+            :not(:last-child){
                 border-bottom: 1px solid $borderColor;
             }
+
 
             &__cell{
                 display: flex;
