--- a/src/scss/blocks/_menu-navigation.scss
+++ b/src/scss/blocks/_menu-navigation.scss
@@ -13,6 +13,7 @@
 
 .services-slider{
     display: flex;
+    justify-content: space-between;
     margin-bottom: 15px;
     padding: 0 10px;
 }
@@ -22,7 +23,6 @@
     justify-content: center;
     align-items: center;
     min-width: 250px;
-    flex-basis: 20%;
     font-family: 'TTLakes-Regular';
     font-weight: lighter;
     border-radius: 6px;
@@ -54,6 +54,6 @@
 
 @media(min-width: 1120px){
     .services-slider__text{
-        font-size: 13px;
+        font-size: 16px;
     }
 }
