--- a/src/scss/blocks/_repair.scss
+++ b/src/scss/blocks/_repair.scss
@@ -24,91 +24,91 @@
         width: 80vw;
         margin: 0 auto;
     }
-}
 
-@media(min-width: 564px){
+    @media(min-width: 564px){
 
-    .repair-block{
-        width: auto;
-        margin: auto;
-    }
-
-}
-
-.repair-main{
-    border: 1px solid transparent;
-    overflow: hidden;
-    margin-top: 20px;
-}
-
-.repair-cards{
-    margin: 24px 20px 40px 0px;
-}
-
-
-@media(min-width: 564px){
-
-    .repair-cards{
-        display: flex;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-        height: 150px;
-        margin-bottom: 15px;
-        margin-left: 20px;
-        margin-right: 0px;
-        transition: height;
-        transition-duration: 0.7s;
-        transition-timing-function: ease-in;
-    }
-
-}
-
-.repair-cards__button{
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    height: 70px !important;
-    margin-bottom: 15px;
-    background: url(../img/repair-imgs/go.svg) 90% no-repeat ;
-    background-color: #fff;
-    box-shadow: inset 0 0 0 1px $borderColor;
-    border-radius: 6px;
-    transition: transform;
-    transition-duration: 0.4s;
-}
-
-@media(min-width: 564px){
-    .repair-cards__button{
-        width: 240px !important;
-        margin-right: 20px;
-
-        &:hover{
-            transform: scale(1.1);
-            box-shadow: 0 2px 5px 0 rgb(184, 183, 183);
-            transition: transform;
-            transition-duration: 0.4s;
-        }
-
-        &:hover>img{
-            margin-left: 12%;
-            transition: margin-left;
-            transition-duration: 0.5s;
+        &-block{
+            width: auto;
+            margin: auto;
         }
     
     }
 
-}
+    &-main{
+        border: 1px solid transparent;
+        overflow: hidden;
+        margin-top: 20px;
+    }
 
-.repair-cards__img{
-    display: block;
-    margin-left: 15px;
-    background-color: #fff;
-    transition: margin-left;
-    transition-duration: 0.5s;
+    &-cards{
+        margin: 24px 20px 40px 0px;
 
-    //for samsung image to hide strange blue line
-    &--cliped{
-        clip-path: ellipse(120px 50px at 0px 0px);
+        &__button{
+            display: flex;
+            align-items: center;
+            justify-content: start;
+            height: 70px !important;
+            margin-bottom: 15px;
+            background: url(../img/repair-imgs/go.svg) 90% no-repeat ;
+            background-color: #fff;
+            box-shadow: inset 0 0 0 1px $borderColor;
+            border-radius: 6px;
+            transition: transform;
+            transition-duration: 0.4s;
+        }
+
+        @media(min-width: 564px){
+            &__button{
+                width: 240px !important;
+                margin-right: 20px;
+        
+                &:hover{
+                    transform: scale(1.1);
+                    box-shadow: 0 2px 5px 0 rgb(184, 183, 183);
+                    transition: transform;
+                    transition-duration: 0.4s;
+                }
+        
+                &:hover>img{
+                    margin-left: 12%;
+                    transition: margin-left;
+                    transition-duration: 0.5s;
+                }
+            
+            }
+        
+        }
+
+        &__img{
+            display: block;
+            margin-left: 15px;
+            background-color: #fff;
+            transition: margin-left;
+            transition-duration: 0.5s;
+        
+            //for samsung image to hide strange blue line
+            &--cliped{
+                clip-path: ellipse(120px 50px at 0px 0px);
+            }
+        }
+    }
+
+    
+    @media(min-width: 564px){
+
+        &-cards{
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            height: 150px;
+            margin-bottom: 15px;
+            margin-left: 20px;
+            margin-right: 0px;
+            transition: height;
+            transition-duration: 0.7s;
+            transition-timing-function: ease-in;
+        }
+
     }
 }
 
@@ -116,15 +116,14 @@
     display: none;
 }
 
-.spacer{
-    visibility: hidden;
-}
-
-
 @media(min-width: 564px){
     .services__readmore-wrap--repair-mode{
         display: block;
         margin-left: 32px;
         margin-bottom: 10px;
     }
+}
+
+.spacer{
+    visibility: hidden;
 }
