--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,7 @@
 @import "blocks/services-header";
 
 //Menu-navigation rules import
-@import "blocks/menu-navigation";
+@import "blocks/navigation";
 
 //Services block rules import
 @import "blocks/services";
