--- a/src/scss/blocks/_repair.scss
+++ b/src/scss/blocks/_repair.scss
@@ -98,7 +98,7 @@
 
         &-cards{
             display: flex;
-            justify-content: flex-start;
+            justify-content: space-around;
             flex-wrap: wrap;
             height: 150px;
             margin-bottom: 15px;
