--- a/src/scss/blocks/_navigation.scss
+++ b/src/scss/blocks/_navigation.scss
@@ -6,7 +6,6 @@
 @media(min-width: 1120px){
     .navigation{
         max-width: 1120px;
-        margin: 0 15px;
     }
 }
 
@@ -26,7 +25,7 @@
 .services-slider{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 15px;
+    margin: 0 15px 15px;
 
     &__item{
         display: flex;
