--- a/src/scss/blocks/_tech.scss
+++ b/src/scss/blocks/_tech.scss
@@ -12,12 +12,19 @@
     .tech-cards{
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-around;
         margin: 10px;
         height: 180px;
         overflow-y: hidden;
         transition: height;
         transition-duration: 0.7s;
         transition-timing-function: ease-in;
+    }
+}
+
+@media(min-width: 755px){
+    .tech-cards{
+        justify-content: space-between;
     }
 }
 
