--- a/src/scss/blocks/_main-menu.scss
+++ b/src/scss/blocks/_main-menu.scss
@@ -1,15 +1,30 @@
 .main-menu{
-    display: none;
+    // display: none;
     float: left;
+    position: absolute;
+    z-index: 9999;
+    top: 0px;
+    left: 0px;
     flex-direction: column;
     max-width: 320px;
-    height: 100%;
-    min-height: 100vh;
     background-color: #fff;
-    // box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
+    box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
     font-weight: normal;
     font-size: 16px;
     line-height: 24px;
+    transform: translateX(-380px);
+    transition: transform;
+    transition-duration: 0.7s;
+    transition-timing-function: ease-out;
+
+    &--visible-mod{
+        display: block;
+        left: 0px;
+        transform: translateX(0px);
+        transition: transform;
+        transition-duration: 0.7s;
+        transition-timing-function: ease-in;
+    }
 
     &__header{
         width: 320px;
@@ -18,7 +33,8 @@
         justify-content: space-between;
         align-items: center;
         padding: 0 10px;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
+        margin-top: 10px;
     }
 
     &__link{
@@ -72,7 +88,9 @@
 
 @media (min-width: 1440px){
     .main-menu{
-        display: block;
+        position: static;
+        transform: translateX(0px);
+        box-shadow: none;
         overflow-x: hidden;
         height: auto;
     }
@@ -90,8 +108,15 @@
 }
 
 .basic-button--close-bg{
-    background: url("../img/menu-imgs/burger.svg") no-repeat center;
+    background-color: $pincBtnCol;
+    border-radius: 50%;
     margin: 0 10px;
+}
+
+@media (min-width: 1440px){
+    .basic-button--close-bg{
+        display: none;
+    }
 }
 
 .email-wrap,
