--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -33,29 +33,29 @@
     }
 }
 
-.price-card-item__link{
-    width: 110px;
-    height: 32px;
-    background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
-    background-color: $pincBtnCol;
-    border-radius: 16px;
-    font-size: 13px;
-    padding-left: 10px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: $whiteBg;
-    display: flex;
-    align-items: center;
-    font-family: 'TTLakes-Medium';
+// .price-card-item__link{
+//     width: 110px;
+//     height: 32px;
+//     background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
+//     background-color: $pincBtnCol;
+//     border-radius: 16px;
+//     font-size: 13px;
+//     padding-left: 10px;
+//     text-decoration: none;
+//     text-transform: uppercase;
+//     color: $whiteBg;
+//     display: flex;
+//     align-items: center;
+//     font-family: 'TTLakes-Medium';
 
-    &--wide-mode{
-        margin-left: 15px;
-    }
+//     &--wide-mode{
+//         margin-left: 15px;
+//     }
 
-    &:hover{
-        box-shadow: 0 0 5px 2px #e698bf;
-    }
-}
+//     &:hover{
+//         box-shadow: 0 0 5px 2px #e698bf;
+//     }
+// }
 
 .price-wide{
     display: none;
