--- a/src/scss/blocks/_services-header.scss
+++ b/src/scss/blocks/_services-header.scss
@@ -28,7 +28,7 @@
 
 .services__text{
     padding-left: 15px;
-    border-left: 3px solid #41F6D7;
+    border-left: 3px solid $borderGreen;
 }
 
 @media(min-width: 1120px){
