--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -6,7 +6,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.74);
-    z-index: 9998;
+    z-index: 9999;
 }
 
 .modal{
@@ -14,6 +14,7 @@
     top: 0px;
     right: 0px;
     max-width: 440px;
+    height: 100vh;
     background-color: #fff;
     box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
     font-weight: normal;
@@ -30,8 +31,76 @@
         transition-duration: 0.7s;
         transition-timing-function: ease-in;
     }
+
+    &-closing-block{
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        height: 70px;
+    }
+
+    &__btn-wrap{
+        height: 50px;
+        margin-top: 10px;
+        margin-left: 5px;
+    }
+
+    &-header{
+        display: flex;
+        align-items: center;
+        height: 40px;
+        max-width: 345px;
+        box-shadow: inset 3px 0 0 $borderGreen;
+        margin-bottom: 15px;
+
+        &__text{
+            font-family: 'TTLakes-Bold';
+            margin-left: 5%;
+        }
+    }
+
+    &-form-input{
+        width: 100%;
+        height: 48px;
+        border-radius: 6px;
+        border: 1px solid $borderColor;
+        margin-bottom: 15px;
+        padding: 12px;
+        color: #B5B6BC;
+
+        &--textarea-mod{
+            height: 120px;
+        }
+    }
+
+    &-description{
+        max-width: 375px;
+        margin-left: 5%;
+        margin-right: 5%; 
+
+        &__link{
+            color: $pincBtnCol;
+            text-decoration: none;
+        }
+    }
+
+    &-submit{
+        max-width: 375px;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    &-btn{
+        margin: 20px 0;
+        border: none;
+        outline: none;
+        width: 140px;
+        margin-left: auto;
+    }
 }
 
-.modal__btn-wrap{
-    height: 50px;
+.feedback-form{
+    max-width: 375px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
