--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -15,6 +15,8 @@
     top: 0px;
     right: 0px;
     max-width: 440px;
+    height: 100%;
+    overflow-y: scroll;
     background-color: #fff;
     box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
     font-weight: normal;
