--- a/src/scss/blocks/_price.scss
+++ b/src/scss/blocks/_price.scss
@@ -2,26 +2,30 @@
     width: 80vw;
     margin: 0 auto;
 
-    .price-card{
-        background-color: $whiteBg;
-        border-radius: 6px;
-        box-shadow: inset 0 0 0 1px $borderColor;
-        min-height: 200px;
-        font-size: 14px;
-        margin: 16px 0px 55px 0px;
+    .price-cards{
+        list-style: none;
 
-        &-item{
-            margin: 16px;
-
-            &__header{
-                color: $greyText;
-            }
-
-            &__link-item{
-                position: absolute;
-                right: 16px;
-                bottom: 16px;
-                margin-bottom: 0px;
+        .price-card{
+            background-color: $whiteBg;
+            border-radius: 6px;
+            box-shadow: inset 0 0 0 1px $borderColor;
+            min-height: 200px;
+            font-size: 14px;
+            margin: 16px 0px 55px 0px;
+    
+            &-item{
+                margin: 16px;
+    
+                &__header{
+                    color: $greyText;
+                }
+    
+                &__link-item{
+                    position: absolute;
+                    right: 16px;
+                    bottom: 16px;
+                    margin-bottom: 0px;
+                }
             }
         }
     }
@@ -89,6 +93,7 @@
         &-table{
             background-color: $whiteBg;
             border-radius: 6px;
+            list-style: none;
 
             &__row{
                 position: relative;
