--- a/src/scss/blocks/_main-menu.scss
+++ b/src/scss/blocks/_main-menu.scss
@@ -38,16 +38,7 @@
     transition: transform;
     transition-duration: 0.7s;
     transition-timing-function: ease-out;
-
-    &--visible-mod{
-        // display: block;
-        // left: 0px;
-        transform: translateX(0px);
-        transition: transform;
-        transition-duration: 0.7s;
-        transition-timing-function: ease-in;
-    }
-
+    
     &__header{
         width: 320px;
         background-color: #fff;
@@ -247,3 +238,9 @@
     font-weight: normal;
 }
 
+.visible-mode{
+    transition: transform;
+    transform: translateX(0px);
+    transition-duration: 0.7s;
+    transition-timing-function: ease-in;
+}
