--- a/src/scss/blocks/_navigation.scss
+++ b/src/scss/blocks/_navigation.scss
@@ -38,7 +38,7 @@
     
         &--active{
             background-color: #fff;
-            border: 2px solid #99eee0;
+            box-shadow: inset 0 0 0 2px #99eee0;
         }
     }
 
