Fix modal scroll

--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -10,6 +10,12 @@
     z-index: 9999;
 }
 
+@media(min-width: 1124px){
+    .modal-wrap{
+        overflow-y: hidden;
+    }
+}
+
 .modal{
     position: absolute;
     top: 0px;
@@ -103,6 +109,12 @@
 @media (min-width: 1024px){
     .modal{
         height: 100vh;
+    }
+}
+
+@media(min-width: 1124px){
+    .modal{
+        overflow-y: hidden;
     }
 }
 
