--- a/src/scss/_overall.scss
+++ b/src/scss/_overall.scss
@@ -44,7 +44,7 @@ body{
 .basic-long-btn{
     width: 110px;
     height: 32px;
-    background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.svg) 90% no-repeat;
+    background: url(/JS_Mentor_Edicaton/First_Block_Exm_Task/src/img/price-imgs/dropdown.png) 90% no-repeat;
     background-color: $pincBtnCol;
     border-radius: 16px;
     font-size: 13px;
